src/makefile.w32-in: Update dependencies.

--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -390,12 +390,16 @@ EMACS_ROOT = ..
 GNU_LIB = $(EMACS_ROOT)/lib
 NT_INC = $(EMACS_ROOT)/nt/inc
 
-SYSTIME_H      = $(SRC)/systime.h \
+TIMESPEC_H     = $(GNU_LIB)/timespec.h \
 		 $(NT_INC)/sys/time.h
+SYSTIME_H      = $(SRC)/systime.h \
+		 $(TIMESPEC_H)
 ATIMER_H       = $(SRC)/atimer.h \
 		 $(SYSTIME_H)
 BLOCKINPUT_H   = $(SRC)/blockinput.h \
 		 $(ATIMER_H)
+BUFFER_H       = $(SRC)/buffer.h \
+		 $(SYSTIME_H)
 CAREADLINKAT_H = $(GNU_LIB)/careadlinkat.h \
 		 $(NT_INC)/unistd.h
 CHARACTER_H    = $(SRC)/character.h \
@@ -413,6 +417,7 @@ DIR_H          = $(NT_INC)/sys/dir.h \
 W32GUI_H       = $(SRC)/w32gui.h \
 		 $(SYSTIME_H)
 DISPEXTERN_H   = $(SRC)/dispextern.h \
+		 $(SYSTIME_H) \
 		 $(W32GUI_H)
 FILEMODE_H     = $(GNU_LIB)/filemode.h \
 		 $(NT_INC)/sys/stat.h
@@ -455,11 +460,16 @@ SHA512_H       = $(GNU_LIB)/sha512.h \
 		 $(U64_H)
 SOCKET_H       = $(NT_INC)/sys/socket.h \
 		 $(SRC)/w32.h
+STAT_TIME_H    = $(GNU_LIB)/stat-time.h \
+		 $(NT_INC)/sys/stat.h \
+		 $(NT_INC)/sys/time.h
 SYSTTY_H       = $(SRC)/systty.h \
 		 $(NT_INC)/sys/ioctl.h \
 		 $(NT_INC)/unistd.h
 TERMHOOKS_H    = $(SRC)/termhooks.h \
 		 $(SYSTIME_H)
+UTIMENS_H      = $(GNU_LIB)/utimens.h \
+		 $(NT_INC)/sys/time.h
 W32TERM_H      = $(SRC)/w32term.h \
 		 $(W32GUI_H)
 WINDOW_H       = $(SRC)/window.h \
@@ -467,13 +477,13 @@ WINDOW_H       = $(SRC)/window.h \
 
 $(BLD)/alloc.$(O) : \
 	$(SRC)/alloc.c \
-	$(SRC)/buffer.h \
 	$(SRC)/puresize.h \
 	$(SRC)/syssignal.h \
 	$(SRC)/w32.h \
 	$(NT_INC)/unistd.h \
 	$(GNU_LIB)/verify.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(FRAME_H) \
@@ -497,7 +507,7 @@ $(BLD)/atimer.$(O) : \
 
 $(BLD)/bidi.$(O) : \
 	$(SRC)/bidi.c \
-	$(SRC)/buffer.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(DISPEXTERN_H) \
@@ -505,7 +515,6 @@ $(BLD)/bidi.$(O) : \
 
 $(BLD)/buffer.$(O) : \
 	$(SRC)/buffer.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/indent.h \
 	$(SRC)/keymap.h \
@@ -515,6 +524,7 @@ $(BLD)/buffer.$(O) : \
 	$(NT_INC)/unistd.h \
 	$(GNU_LIB)/verify.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(FRAME_H) \
@@ -525,8 +535,8 @@ $(BLD)/buffer.$(O) : \
 
 $(BLD)/bytecode.$(O) : \
 	$(SRC)/bytecode.c \
-	$(SRC)/buffer.h \
 	$(SRC)/syntax.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(LISP_H) \
@@ -534,9 +544,9 @@ $(BLD)/bytecode.$(O) : \
 
 $(BLD)/callint.$(O) : \
 	$(SRC)/callint.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/keymap.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(KEYBOARD_H) \
@@ -545,7 +555,6 @@ $(BLD)/callint.$(O) : \
 
 $(BLD)/callproc.$(O) : \
 	$(SRC)/callproc.c \
-	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
 	$(SRC)/commands.h \
 	$(SRC)/composite.h \
@@ -555,6 +564,7 @@ $(BLD)/callproc.$(O) : \
 	$(NT_INC)/sys/file.h \
 	$(NT_INC)/unistd.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CODING_H) \
 	$(CONFIG_H) \
@@ -566,27 +576,27 @@ $(BLD)/callproc.$(O) : \
 
 $(BLD)/casefiddle.$(O) : \
 	$(SRC)/casefiddle.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/composite.h \
 	$(SRC)/keymap.h \
 	$(SRC)/syntax.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(LISP_H)
 
 $(BLD)/casetab.$(O) : \
 	$(SRC)/casetab.c \
-	$(SRC)/buffer.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(LISP_H)
 
 $(BLD)/category.$(O) : \
 	$(SRC)/category.c \
-	$(SRC)/buffer.h \
 	$(SRC)/category.h \
 	$(SRC)/keymap.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CONFIG_H) \
@@ -603,10 +613,10 @@ $(BLD)/ccl.$(O) : \
 
 $(BLD)/character.$(O) : \
 	$(SRC)/character.c \
-	$(SRC)/buffer.h \
 	$(SRC)/composite.h \
 	$(SRC)/disptab.h \
 	$(GNU_LIB)/intprops.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CONFIG_H) \
@@ -614,9 +624,9 @@ $(BLD)/character.$(O) : \
 
 $(BLD)/charset.$(O) : \
 	$(SRC)/charset.c \
-	$(SRC)/buffer.h \
 	$(SRC)/disptab.h \
 	$(NT_INC)/unistd.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CODING_H) \
@@ -633,10 +643,10 @@ $(BLD)/chartab.$(O) : \
 
 $(BLD)/cmds.$(O) : \
 	$(SRC)/cmds.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/keymap.h \
 	$(SRC)/syntax.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(DISPEXTERN_H) \
@@ -647,9 +657,9 @@ $(BLD)/cmds.$(O) : \
 
 $(BLD)/coding.$(O) : \
 	$(SRC)/coding.c \
-	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
 	$(SRC)/composite.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CODING_H) \
@@ -661,7 +671,7 @@ $(BLD)/coding.$(O) : \
 
 $(BLD)/composite.$(O) : \
 	$(SRC)/composite.c \
-	$(SRC)/buffer.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CODING_H) \
 	$(CONFIG_H) \
@@ -675,11 +685,11 @@ $(BLD)/composite.$(O) : \
 
 $(BLD)/data.$(O) : \
 	$(SRC)/data.c \
-	$(SRC)/buffer.h \
 	$(SRC)/keymap.h \
 	$(SRC)/puresize.h \
 	$(SRC)/syssignal.h \
 	$(GNU_LIB)/intprops.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(FONT_H) \
@@ -690,13 +700,13 @@ $(BLD)/data.$(O) : \
 
 $(BLD)/dired.$(O) : \
 	$(SRC)/dired.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/regex.h \
 	$(NT_INC)/pwd.h \
 	$(NT_INC)/sys/stat.h \
 	$(NT_INC)/unistd.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CODING_H) \
@@ -705,11 +715,11 @@ $(BLD)/dired.$(O) : \
 	$(FILEMODE_H) \
 	$(GRP_H) \
 	$(LISP_H) \
+	$(STAT-TIME_H) \
 	$(SYSTIME_H)
 
 $(BLD)/dispnew.$(O) : \
 	$(SRC)/dispnew.c \
-	$(SRC)/buffer.h \
 	$(SRC)/cm.h \
 	$(SRC)/commands.h \
 	$(SRC)/disptab.h \
@@ -719,6 +729,7 @@ $(BLD)/dispnew.$(O) : \
 	$(SRC)/termopts.h \
 	$(NT_INC)/unistd.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(DISPEXTERN_H) \
@@ -734,11 +745,11 @@ $(BLD)/dispnew.$(O) : \
 
 $(BLD)/doc.$(O) : \
 	$(SRC)/doc.c \
-	$(SRC)/buffer.h \
 	$(SRC)/buildobj.h \
 	$(SRC)/keymap.h \
 	$(NT_INC)/sys/file.h \
 	$(NT_INC)/unistd.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(KEYBOARD_H) \
@@ -753,13 +764,13 @@ $(BLD)/doprnt.$(O) : \
 
 $(BLD)/editfns.$(O) : \
 	$(SRC)/editfns.c \
-	$(SRC)/buffer.h \
 	$(NT_INC)/pwd.h \
 	$(NT_INC)/unistd.h \
 	$(GNU_LIB)/intprops.h \
 	$(GNU_LIB)/strftime.h \
 	$(GNU_LIB)/verify.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CODING_H) \
 	$(CONFIG_H) \
@@ -771,7 +782,6 @@ $(BLD)/editfns.$(O) : \
 
 $(BLD)/emacs.$(O) : \
 	$(SRC)/emacs.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/gnutls.h \
 	$(SRC)/keymap.h \
@@ -782,6 +792,7 @@ $(BLD)/emacs.$(O) : \
 	$(NT_INC)/sys/file.h \
 	$(NT_INC)/unistd.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(FRAME_H) \
@@ -805,12 +816,12 @@ $(BLD)/eval.$(O) : \
 
 $(BLD)/fileio.$(O) : \
 	$(SRC)/fileio.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(NT_INC)/pwd.h \
 	$(NT_INC)/sys/stat.h \
 	$(NT_INC)/unistd.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CODING_H) \
 	$(CONFIG_H) \
@@ -818,16 +829,17 @@ $(BLD)/fileio.$(O) : \
 	$(FRAME_H) \
 	$(INTERVALS_H) \
 	$(LISP_H) \
+	$(STAT-TIME_H) \
 	$(SYSTIME_H) \
 	$(WINDOW_H)
 
 $(BLD)/filelock.$(O) : \
 	$(SRC)/filelock.c \
-	$(SRC)/buffer.h \
 	$(NT_INC)/pwd.h \
 	$(NT_INC)/sys/file.h \
 	$(NT_INC)/sys/stat.h \
 	$(NT_INC)/unistd.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CODING_H) \
 	$(CONFIG_H) \
@@ -846,12 +858,12 @@ $(BLD)/floatfns.$(O) : \
 
 $(BLD)/fns.$(O) : \
 	$(SRC)/fns.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/keymap.h \
 	$(NT_INC)/unistd.h \
 	$(GNU_LIB)/intprops.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CODING_H) \
 	$(CONFIG_H) \
@@ -868,9 +880,9 @@ $(BLD)/fns.$(O) : \
 
 $(BLD)/font.$(O) : \
 	$(SRC)/font.c \
-	$(SRC)/buffer.h \
 	$(SRC)/composite.h \
 	$(SRC)/fontset.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CONFIG_H) \
@@ -883,10 +895,10 @@ $(BLD)/font.$(O) : \
 
 $(BLD)/fontset.$(O) : \
 	$(SRC)/fontset.c \
-	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
 	$(SRC)/fontset.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CONFIG_H) \
@@ -902,11 +914,11 @@ $(BLD)/fontset.$(O) : \
 
 $(BLD)/frame.$(O) : \
 	$(SRC)/frame.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/fontset.h \
 	$(SRC)/termchar.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(DISPEXTERN_H) \
@@ -920,8 +932,8 @@ $(BLD)/frame.$(O) : \
 
 $(BLD)/fringe.$(O) : \
 	$(SRC)/fringe.c \
-	$(SRC)/buffer.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(DISPEXTERN_H) \
@@ -945,8 +957,8 @@ $(BLD)/gnutls.$(O) : \
 
 $(BLD)/xml.$(O) : \
 	$(SRC)/xml.c \
-	$(SRC)/buffer.h \
 	$(SRC)/w32.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(LISP_H)
@@ -971,7 +983,6 @@ $(BLD)/image.$(O) : \
 
 $(BLD)/indent.$(O) : \
 	$(SRC)/indent.c \
-	$(SRC)/buffer.h \
 	$(SRC)/category.h \
 	$(SRC)/composite.h \
 	$(SRC)/disptab.h \
@@ -979,6 +990,7 @@ $(BLD)/indent.$(O) : \
 	$(SRC)/region-cache.h \
 	$(SRC)/termchar.h \
 	$(SRC)/termopts.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(DISPEXTERN_H) \
@@ -990,10 +1002,10 @@ $(BLD)/indent.$(O) : \
 
 $(BLD)/insdel.$(O) : \
 	$(SRC)/insdel.c \
-	$(SRC)/buffer.h \
 	$(SRC)/region-cache.h \
 	$(GNU_LIB)/intprops.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(INTERVALS_H) \
@@ -1002,10 +1014,10 @@ $(BLD)/insdel.$(O) : \
 
 $(BLD)/intervals.$(O) : \
 	$(SRC)/intervals.c \
-	$(SRC)/buffer.h \
 	$(SRC)/keymap.h \
 	$(SRC)/puresize.h \
 	$(GNU_LIB)/intprops.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(INTERVALS_H) \
@@ -1014,7 +1026,6 @@ $(BLD)/intervals.$(O) : \
 
 $(BLD)/keyboard.$(O) : \
 	$(SRC)/keyboard.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/disptab.h \
 	$(SRC)/keymap.h \
@@ -1028,6 +1039,7 @@ $(BLD)/keyboard.$(O) : \
 	$(NT_INC)/unistd.h \
 	$(ATIMER_H) \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(DISPEXTERN_H) \
@@ -1043,11 +1055,11 @@ $(BLD)/keyboard.$(O) : \
 
 $(BLD)/keymap.$(O) : \
 	$(SRC)/keymap.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/keymap.h \
 	$(SRC)/puresize.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CONFIG_H) \
@@ -1064,13 +1076,13 @@ $(BLD)/lastfile.$(O) : \
 
 $(BLD)/lread.$(O) : \
 	$(SRC)/lread.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/epaths.h \
 	$(NT_INC)/sys/file.h \
 	$(NT_INC)/sys/stat.h \
 	$(NT_INC)/unistd.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CODING_H) \
@@ -1083,9 +1095,9 @@ $(BLD)/lread.$(O) : \
 
 $(BLD)/macros.$(O) : \
 	$(SRC)/macros.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/macros.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(KEYBOARD_H) \
@@ -1094,7 +1106,7 @@ $(BLD)/macros.$(O) : \
 
 $(BLD)/marker.$(O) : \
 	$(SRC)/marker.c \
-	$(SRC)/buffer.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(LISP_H)
@@ -1115,10 +1127,10 @@ $(BLD)/menu.$(O) : \
 
 $(BLD)/minibuf.$(O) : \
 	$(SRC)/minibuf.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/keymap.h \
 	$(SRC)/syntax.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(DISPEXTERN_H) \
@@ -1201,9 +1213,9 @@ $(BLD)/w32console.$(O) : \
 
 $(BLD)/print.$(O) : \
 	$(SRC)/print.c \
-	$(SRC)/buffer.h \
 	$(SRC)/termchar.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CONFIG_H) \
@@ -1220,7 +1232,6 @@ $(BLD)/print.$(O) : \
 
 $(BLD)/process.$(O) : \
 	$(SRC)/process.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/composite.h \
 	$(SRC)/gnutls.h \
@@ -1237,6 +1248,7 @@ $(BLD)/process.$(O) : \
 	$(NT_INC)/unistd.h \
 	$(ATIMER_H) \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CODING_H) \
 	$(CONFIG_H) \
@@ -1261,18 +1273,19 @@ $(BLD)/ralloc.$(O) : \
 
 $(BLD)/regex.$(O) : \
 	$(SRC)/regex.c \
-	$(SRC)/buffer.h \
 	$(SRC)/category.h \
 	$(SRC)/regex.h \
 	$(SRC)/syntax.h \
+	$(NT_INC)/unistd.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(LISP_H)
 
 $(BLD)/region-cache.$(O) : \
 	$(SRC)/region-cache.c \
-	$(SRC)/buffer.h \
 	$(SRC)/region-cache.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(LISP_H)
@@ -1290,13 +1303,13 @@ $(BLD)/scroll.$(O) : \
 
 $(BLD)/search.$(O) : \
 	$(SRC)/search.c \
-	$(SRC)/buffer.h \
 	$(SRC)/category.h \
 	$(SRC)/commands.h \
 	$(SRC)/regex.h \
 	$(SRC)/region-cache.h \
 	$(SRC)/syntax.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CONFIG_H) \
@@ -1314,12 +1327,12 @@ $(BLD)/sound.$(O) : \
 
 $(BLD)/syntax.$(O) : \
 	$(SRC)/syntax.c \
-	$(SRC)/buffer.h \
 	$(SRC)/category.h \
 	$(SRC)/commands.h \
 	$(SRC)/keymap.h \
 	$(SRC)/regex.h \
 	$(SRC)/syntax.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(INTERVALS_H) \
@@ -1353,11 +1366,11 @@ $(BLD)/sysdep.$(O) : \
 	$(SYSTIME_H) \
 	$(SYSTTY_H) \
 	$(TERMHOOKS_H) \
+	$(UTIMENS_H) \
 	$(WINDOW_H)
 
 $(BLD)/term.$(O) : \
 	$(SRC)/term.c \
-	$(SRC)/buffer.h \
 	$(SRC)/cm.h \
 	$(SRC)/composite.h \
 	$(SRC)/disptab.h \
@@ -1367,8 +1380,10 @@ $(BLD)/term.$(O) : \
 	$(SRC)/termopts.h \
 	$(SRC)/tparam.h \
 	$(NT_INC)/sys/file.h \
+	$(NT_INC)/sys/time.h \
 	$(NT_INC)/unistd.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CODING_H) \
@@ -1395,7 +1410,7 @@ $(BLD)/terminal.$(O) : \
 
 $(BLD)/textprop.$(O) : \
 	$(SRC)/textprop.c \
-	$(SRC)/buffer.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(INTERVALS_H) \
@@ -1410,8 +1425,8 @@ $(BLD)/tparam.$(O) : \
 
 $(BLD)/undo.$(O) : \
 	$(SRC)/undo.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(LISP_H) \
@@ -1431,13 +1446,13 @@ $(BLD)/vm-limit.$(O) : \
 
 $(BLD)/window.$(O) : \
 	$(SRC)/window.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/disptab.h \
 	$(SRC)/indent.h \
 	$(SRC)/keymap.h \
 	$(SRC)/termchar.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CONFIG_H) \
 	$(DISPEXTERN_H) \
@@ -1451,7 +1466,6 @@ $(BLD)/window.$(O) : \
 
 $(BLD)/xdisp.$(O) : \
 	$(SRC)/xdisp.c \
-	$(SRC)/buffer.h \
 	$(SRC)/commands.h \
 	$(SRC)/disptab.h \
 	$(SRC)/fontset.h \
@@ -1462,6 +1476,7 @@ $(BLD)/xdisp.$(O) : \
 	$(SRC)/termchar.h \
 	$(SRC)/termopts.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CODING_H) \
@@ -1479,11 +1494,11 @@ $(BLD)/xdisp.$(O) : \
 
 $(BLD)/xfaces.$(O) : \
 	$(SRC)/xfaces.c \
-	$(SRC)/buffer.h \
 	$(SRC)/fontset.h \
 	$(SRC)/termchar.h \
 	$(NT_INC)/sys/stat.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CONFIG_H) \
@@ -1499,7 +1514,6 @@ $(BLD)/xfaces.$(O) : \
 
 $(BLD)/w32fns.$(O) : \
 	$(SRC)/w32fns.c \
-	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
 	$(SRC)/epaths.h \
 	$(SRC)/fontset.h \
@@ -1507,6 +1521,7 @@ $(BLD)/w32fns.$(O) : \
 	$(SRC)/w32font.h \
 	$(SRC)/w32heap.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CODING_H) \
@@ -1524,10 +1539,10 @@ $(BLD)/w32fns.$(O) : \
 
 $(BLD)/w32menu.$(O) : \
 	$(SRC)/w32menu.c \
-	$(SRC)/buffer.h \
 	$(SRC)/keymap.h \
 	$(SRC)/w32heap.h \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CODING_H) \
@@ -1543,7 +1558,6 @@ $(BLD)/w32menu.$(O) : \
 
 $(BLD)/w32term.$(O) : \
 	$(SRC)/w32term.c \
-	$(SRC)/buffer.h \
 	$(SRC)/ccl.h \
 	$(SRC)/disptab.h \
 	$(SRC)/fontset.h \
@@ -1555,6 +1569,7 @@ $(BLD)/w32term.$(O) : \
 	$(NT_INC)/sys/stat.h \
 	$(ATIMER_H) \
 	$(BLOCKINPUT_H) \
+	$(BUFFER_H) \
 	$(CHARACTER_H) \
 	$(CHARSET_H) \
 	$(CODING_H) \
