Improve port of struct timespec to MS-Windows.
 lib/makefile.w32-in ($(BLD)/dtotimespec.$(O)):
 ($(BLD)/timespec-add.$(O)):
 ($(BLD)/timespec-sub.$(O)): Don't depend on
 $(EMACS_ROOT)/nt/inc/sys/time.h.
 lib/stat-time.h:
 lib/timespec.h:
 lib/utimens.h: Revert last change.
 src/makefile.w32-in (TIMESPEC_H): Remove nt/inc/sys/time.h.
 (SYSTIME_H): Add nt/inc/sys/time.h.
 src/systime.h [WINDOWSNT]: Include sys/time.h.
 src/s/ms-w32.h (struct timespec): Definition moved from
 nt/inc/sys/time.h.  Suggested by Paul Eggert <eggert@cs.ucla.edu>.
 nt/inc/sys/time.h (struct timespec): Don't define it here, it is
 now defined in src/s/ms-w32.h.

--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -390,10 +390,10 @@ EMACS_ROOT = ..
 GNU_LIB = $(EMACS_ROOT)/lib
 NT_INC = $(EMACS_ROOT)/nt/inc
 
-TIMESPEC_H     = $(GNU_LIB)/timespec.h \
-		 $(NT_INC)/sys/time.h
+TIMESPEC_H     = $(GNU_LIB)/timespec.h
 SYSTIME_H      = $(SRC)/systime.h \
-		 $(TIMESPEC_H)
+		 $(TIMESPEC_H) \
+		 $(NT_INC)/sys/time.h
 ATIMER_H       = $(SRC)/atimer.h \
 		 $(SYSTIME_H)
 BLOCKINPUT_H   = $(SRC)/blockinput.h \
