--- a/src/makefile.w32-in
+++ b/src/makefile.w32-in
@@ -390,10 +390,9 @@ EMACS_ROOT = ..
 GNU_LIB = $(EMACS_ROOT)/lib
 NT_INC = $(EMACS_ROOT)/nt/inc
 
-TIMESPEC_H     = $(GNU_LIB)/timespec.h
 SYSTIME_H      = $(SRC)/systime.h \
-		 $(TIMESPEC_H) \
-		 $(NT_INC)/sys/time.h
+		 $(NT_INC)/sys/time.h \
+		 $(GNU_LIB)/timespec.h
 ATIMER_H       = $(SRC)/atimer.h \
 		 $(SYSTIME_H)
 BLOCKINPUT_H   = $(SRC)/blockinput.h \
@@ -461,15 +460,12 @@ SHA512_H       = $(GNU_LIB)/sha512.h \
 SOCKET_H       = $(NT_INC)/sys/socket.h \
 		 $(SRC)/w32.h
 STAT_TIME_H    = $(GNU_LIB)/stat-time.h \
-		 $(NT_INC)/sys/stat.h \
-		 $(NT_INC)/sys/time.h
+		 $(NT_INC)/sys/stat.h
 SYSTTY_H       = $(SRC)/systty.h \
 		 $(NT_INC)/sys/ioctl.h \
 		 $(NT_INC)/unistd.h
 TERMHOOKS_H    = $(SRC)/termhooks.h \
 		 $(SYSTIME_H)
-UTIMENS_H      = $(GNU_LIB)/utimens.h \
-		 $(NT_INC)/sys/time.h
 W32TERM_H      = $(SRC)/w32term.h \
 		 $(W32GUI_H)
 WINDOW_H       = $(SRC)/window.h \
@@ -1353,6 +1349,7 @@ $(BLD)/sysdep.$(O) : \
 	$(NT_INC)/unistd.h \
 	$(GNU_LIB)/allocator.h \
 	$(GNU_LIB)/ignore-value.h \
+	$(GNU_LIB)/utimens.h \
 	$(BLOCKINPUT_H) \
 	$(CAREADLINKAT_H) \
 	$(CONFIG_H) \
@@ -1366,7 +1363,6 @@ $(BLD)/sysdep.$(O) : \
 	$(SYSTIME_H) \
 	$(SYSTTY_H) \
 	$(TERMHOOKS_H) \
-	$(UTIMENS_H) \
 	$(WINDOW_H)
 
 $(BLD)/term.$(O) : \
