Clean out last vestiges of the old HAVE_CONFIG_H stuff.

--- a/lib-src/makefile.w32-in
+++ b/lib-src/makefile.w32-in
@@ -24,7 +24,7 @@ ALL = $(BLD)/test-distrib.exe $(BLD)/make-docfile.exe $(BLD)/hexl.exe\
 .PHONY: make-docfile
 
 LOCAL_FLAGS	= -DWINDOWSNT -DDOS_NT -DNO_LDAV=1 \
-		  -DNO_ARCHIVES=1 -DHAVE_CONFIG_H=1 -I../lib \
+		  -DNO_ARCHIVES=1 -I../lib \
 		  -I../nt/inc -I../src $(EMACS_EXTRA_C_FLAGS)
 
 LIBS 		= $(BASE_LIBS) $(ADVAPI32)
