Fix parallel bootstrap on MS-Windows in lib/ and lisp/.
 lib/makefile.w32-in ($(GNULIBOBJS)): Depend on stamp_BLD.  This
 replaces separate dependency for each object file, which required
 the same object file to be mentioned twice, causing failures in
 parallel builds.
 lisp/makefile.w32-in (compile, compile-always): Depend on
 update-subdirs, not on subdirs.el.  Otherwise, several different
 sub-targets of 'bootstrap' running in parallel could
 simultaneously write to subdirs.el, producing a garbled file.

--- a/lib/makefile.w32-in
+++ b/lib/makefile.w32-in
@@ -183,10 +183,7 @@ $(BLD)/filemode.$(O) : \
 # The following dependencies are for supporting parallel builds, where
 # we must make sure $(BLD) exists before any compilation starts.
 #
-$(BLD)/dtoastr.$(O) $(BLD)/getopt.$(O) $(BLD)/getopt1.$(O): stamp_BLD
-$(BLD)/strftime.$(O) $(BLD)/time_r.$(O) $(BLD)/md5.$(O): stamp_BLD
-$(BLD)/sha1.$(O) $(BLD)/sha256.$(O) $(BLD)/sha512.$(O): stamp_BLD
-$(BLD)/filemode.$(O): stamp_BLD
+$(GNULIBOBJS): stamp_BLD
 
 #
 # Headers we would preprocess if we could.
