Fix compilation with --enable-gcc-warnings and -O1 optimization level. * configure.in: If --enable-gcc-warnings, disable -Wunsafe-loop-optimizations for -O1 optimization level. * src/doprnt.c (doprnt): Change type of tem to int, initialize to avoid compiler warning.  Add eassert. * src/search.c (simple_search): Initialize match_byte to avoid compiler warning.  Add eassert.

--- a/configure.in
+++ b/configure.in
@@ -681,6 +681,12 @@ else
   nw="$nw -Wsuggest-attribute=const"
   nw="$nw -Wsuggest-attribute=pure"
 
+  # Some loops can't be optimized with -O1,
+  # so remove -Wunsafe-loop-optimizations.
+  if echo "$CFLAGS" | $EGREP 'O1' 1>/dev/null; then
+    nw="$nw -Wunsafe-loop-optimizations"
+  fi
+
   gl_MANYWARN_ALL_GCC([ws])
   gl_MANYWARN_COMPLEMENT([ws], [$ws], [$nw])
   for w in $ws; do
