* lisp/Makefile.in (bzr-update): Use "compile". It is the same as "recompile autoloads", but parallelizable.

--- a/lisp/Makefile.in
+++ b/lisp/Makefile.in
@@ -191,7 +191,7 @@ updates: update-subdirs autoloads finder-data custom-deps
 
 # This is useful after "bzr up"; but it doesn't do anything that a
 # plain "make" at top-level doesn't.
-bzr-update: recompile autoloads finder-data custom-deps
+bzr-update: compile finder-data custom-deps
 
 # Update the AUTHORS file.
 
