--- a/lisp/Makefile.in
+++ b/lisp/Makefile.in
@@ -189,6 +189,10 @@ updates: update-subdirs autoloads finder-data custom-deps
 
 # This is useful after "bzr up"; but it doesn't do anything that a
 # plain "make" at top-level doesn't.
+# The only difference between this and this directory's "all" rule
+# is that this runs "autoloads" as well (because it uses "compile"
+# rather than "compile-main").  In a bootstrap, $(lisp) in src/Makefile
+# triggers this directory's autoloads rule.
 bzr-update: compile finder-data custom-deps
 
 # Update the AUTHORS file.
