--- a/configure.in
+++ b/configure.in
@@ -575,7 +575,9 @@ gl_EARLY
 
 AC_ARG_ENABLE([gcc-warnings],
   [AS_HELP_STRING([--enable-gcc-warnings],
-                  [turn on lots of GCC warnings (for developers)])],
+                  [turn on lots of GCC warnings. This is intended for
+		   developers, and may generate false alarms when used
+		   with older or non-GNU development tools.])],
   [case $enableval in
      yes|no) ;;
      *)      AC_MSG_ERROR([bad value $enableval for gcc-warnings option]) ;;
@@ -597,7 +599,7 @@ if test "${enableval}" != "no"; then
       	 LTO="-flto=$CPUS"
       else
 	 LTO="-flto"
-      fi	 
+      fi
       old_CFLAGS=$CFLAGS
       CFLAGS="$CFLAGS $LTO"
       AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[]], [[]])],
