Update Windows port to gnulib changes in revno:108922.
* lib-src/makefile.w32-in ($(BLD)/ctags.$(O), $(BLD)/etags.$(O)):
Update dependencies.

* lib/makefile.w32-in (GNULIBOBJS): Add $(BLD)/c-ctype.$(O),
$(BLD)/c-strcasecmp.$(O) and $(BLD)/c-strncasecmp.$(O).
($(BLD)/c-ctype.$(O), $(BLD)/c-strcasecmp.$(O))
($(BLD)/c-strncasecmp.$(O)): New dependencies.

* src/makefile.w32-in (DISPEXTERN_H, $(BLD)/regex.$(O)):
Update dependencies.

* src/s/ms-w32.h [_MSC_VER]: Remove strcasecmp, strncasecmp.

--- a/lib-src/makefile.w32-in
+++ b/lib-src/makefile.w32-in
@@ -363,6 +363,7 @@ $(BLD)/ctags.$(O) : \
 	$(EMACS_ROOT)/src/s/ms-w32.h \
 	$(EMACS_ROOT)/lib-src/../src/config.h \
 	$(SRC)/ntlib.h \
+	$(EMACS_ROOT)/lib/c-strcase.h \
 	$(EMACS_ROOT)/lib/getopt.h
 
 $(BLD)/ebrowse.$(O) : \
@@ -384,6 +385,7 @@ $(BLD)/etags.$(O) : \
 	$(EMACS_ROOT)/src/s/ms-w32.h \
 	$(EMACS_ROOT)/lib-src/../src/config.h \
 	$(SRC)/ntlib.h \
+	$(EMACS_ROOT)/lib/c-strcase.h \
 	$(EMACS_ROOT)/lib/getopt.h
 
 $(BLD)/hexl.$(O) : \
