* configure.in (BROKEN_SA_RESTART): Doc fix.
* src/sysdep.c, src/s/irix6-5.h: Related comments.

--- a/configure.in
+++ b/configure.in
@@ -3140,9 +3140,11 @@ case $opsys in
    gnu-kfreebsd) opsysfile="s/gnu-linux.h" ;;
 
    hpux11)
-     dnl SA_RESTART resets the timeout of `select', so don't use it.
-     AC_DEFINE(BROKEN_SA_RESTART, 1, [Define if SA_RESTART should not
-       be used.])
+     dnl See comments in sysdep.c:sys_signal.
+     dnl SA_RESTART resets the timeout of `select' on hpux11.
+     dnl Defining BROKEN_SA_RESTART is not the same as undef'ing SA_RESTART.
+     AC_DEFINE(BROKEN_SA_RESTART, 1, [Define if SA_RESTART should only
+       be used in batch mode.])
      dnl It works to open the pty's tty in the parent (Emacs), then
      dnl close and reopen it in the child.
      AC_DEFINE(USG_SUBTTY_WORKS, 1, [Define for USG systems where it
